Sửa lại cấu trúc authen